--- a/docs/选课.md
+++ b/docs/选课.md
@@ -1,6 +1,7 @@
 # 选课API
 ## 数据结构
 ### 请求头
+- 只需要Authorization
 ### 课程
 ```json
 {
@@ -318,44 +319,82 @@
   "message": null,
   "data": {
     "grades": [
-      "2025"
+      "2025",
+      "2024",
+      "2023",
+      "2022",
+      "2021",
+      "2020"
     ], // 年级
     "departments": [
       {
-        "id": 10501, // 部门ID
-        "nameZh": "经济学系(不启用)", // 部门名称
-        "nameEn": "Department of Economics",
-        "code": "010501",
+        "id": 132,
+        "nameZh": "心理与认知科学学院",
+        "nameEn": "College of Psychology and Cognitive Science",
+        "code": "0132",
+        "telephone": null
+      },
+      {
+        "id": 135,
+        "nameZh": "社会发展学院",
+        "nameEn": "School of Social Development",
+        "code": "0135",
         "telephone": null
       }
-    ],
+    ], // 开课部门
+    "majors": [
+      {
+        "id": 6146,
+        "nameZh": "计算机科学拔尖班",
+        "nameEn": null,
+        "departmentIds": [
+          8968
+        ]
+      },
+      {
+        "id": 3330,
+        "nameZh": "艺术教育",
+        "nameEn": "Art Education",
+        "departmentIds": [
+          8276,
+          8287
+        ]
+      }
+    ], // 开课专业
     "campuses": [
       {
-        "id": 6, // 校区ID         "nameZh": "闵行校区", //校区名称
-        "nameEn": null
+        "id": 6,
+        "nameZh": "闵行校区",
+        "nameEn": "Minhang Campus"
       },
       {
         "id": 7,
         "nameZh": "普陀校区",
-        "nameEn": null
+        "nameEn": "Putuo Campus"
       }
-    ],
+    ], // 开课校区
     "courseTypes": [
       {
-        "id": 395, // 课程类型ID
-        "nameZh": "通识教育课程", // 课程类型名称
-        "nameEn": "General Educational Courses",
-        "code": "01" // 课程类型代码
+        "id": 1328,
+        "nameZh": "实践、技术与创新",
+        "nameEn": "Module courses",
+        "code": "010702"
+      },
+      {
+        "id": 1329,
+        "nameZh": "思辨、推理与判断",
+        "nameEn": "Module courses",
+        "code": "010703"
       }
-    ],
+    ], // 课程性质
     "courseProperties": [
       {
-        "id": 64, // 课程属性ID
-        "nameZh": "公共必修", // 课程属性名称
+        "id": 65,
+        "nameZh": "通识教育课程",
         "nameEn": null,
-        "code": "GGBX" // 课程属性代码
+        "code": "TXJY"
       }
-    ]
+    ] // 课程类型
   }
 }
 ```
@@ -370,9 +409,10 @@
   "pageNo": 1, // 页数
   "pageSize": 20, // 页大小
   "courseNameOrCode": "", // 课程名称
-  "lessonNameOrCode": "",   "teacherNameOrCode": "", // 教师名称
-  "week": "",
-  "grade": "",
+  "lessonNameOrCode": "",
+  "teacherNameOrCode": "", // 教师名称
+  "week": "", // 上课星期
+  "grade": "", // 上课年纪
   "departmentId": "", // 部门ID
   "majorId": "", // 专业ID
   "adminclassId": "",
@@ -381,9 +421,9 @@
   "courseTypeId": "", // 课程类型ID
   "coursePropertyId": "", // 课程属性ID
   "canSelect": true, // 是否可选
-  "_canSelect": "可选",
-  "creditGte": null,
-  "creditLte": null,
+  "_canSelect": "可选", // 
+  "creditGte": null, // 学分大于等于
+  "creditLte": null, // 学分小于等于
   "hasCount": null,
   "ids": [0],
   "substitutedCourseId": null,
