Docs: update course part

--- a/docs/选课.md
+++ b/docs/选课.md
@@ -533,19 +533,84 @@
 ```
 ## 选退课
 均采用先验证后查询
-### 发起验证/选退课请求
-- POST https://byyt.ecnu.edu.cn/course-selection-api/api/v1/student/course-select/{add/drop}-{predicate/request}
+### 发起选课验证
+- POST https://byyt.ecnu.edu.cn/course-selection-api/api/v1/student/course-select/add-predicate
 - Body
 ```json
 {
-  "studentAssoc": 828095, // 学生ID
-  "courseSelectTurnAssoc": 41, // 选课轮次ID
+  "studentAssoc": 000000, // 学生ID
+  "courseSelectTurnAssoc": 00, // 选课轮次ID
   "requestMiddleDtos": [
     {
-      "lessonAssoc": 345535, // 课程ID
+      "lessonAssoc": 000000, // 课程ID
       "virtualCost": 0 // 意愿值
     }
   ],
+  "coursePackAssoc": null
+}
+```
+- Response
+```json
+{
+  "result": 0,
+  "message": null,
+  "data": "00000000-0000-0000-0000-000000000000" // 请求ID
+}
+```
+### 发起选课请求
+- POST https://byyt.ecnu.edu.cn/course-selection-api/api/v1/student/course-select/add-request
+- Body
+```json
+{
+  "studentAssoc": 000000, // 学生ID
+  "courseSelectTurnAssoc": 00, // 选课轮次ID
+  "requestMiddleDtos": [
+    {
+      "lessonAssoc": 000000, // 课程ID
+      "virtualCost": 0 // 意愿值
+    }
+  ],
+  "coursePackAssoc": null
+}
+```
+- Response
+```json
+{
+  "result": 0,
+  "message": null,
+  "data": "00000000-0000-0000-0000-000000000000" // 请求ID
+}
+```
+### 发起退课验证
+- POST https://byyt.ecnu.edu.cn/course-selection-api/api/v1/student/course-select/drop-{predicate/request}
+- Body
+```json
+{
+  "studentAssoc": 000000, // 学生ID
+  "courseSelectTurnAssoc": 00, // 选课轮次ID
+  "lessonAssocSet": [
+    000000
+  ] // 课程ID列表
+}
+```
+- Response
+```json
+{
+  "result": 0,
+  "message": null,
+  "data": "00000000-0000-0000-0000-000000000000" // 请求ID
+}
+```
+### 发起退课请求
+- POST https://byyt.ecnu.edu.cn/course-selection-api/api/v1/student/course-select/drop-request
+- Body
+```json
+{
+  "studentAssoc": 000000, // 学生ID
+  "courseSelectTurnAssoc": 00, // 选课轮次ID
+  "lessonAssocs": [
+    000000
+  ], // 课程ID列表
   "coursePackAssoc": null
 }
 ```
