--- a/docs/选课.md
+++ b/docs/选课.md
@@ -409,15 +409,14 @@
   "pageNo": 1, // 页数
   "pageSize": 20, // 页大小
   "courseNameOrCode": "", // 课程名称
-  "lessonNameOrCode": "",
+  "lessonNameOrCode": "", // 教学班名称
   "teacherNameOrCode": "", // 教师名称
-  "week": "", // 上课星期
+  "week": "", // 上课星期，1-7
   "grade": "", // 上课年纪
   "departmentId": "", // 部门ID
   "majorId": "", // 专业ID
-  "adminclassId": "",
   "campusId": "", // 校区ID
-  "openDepartmentId": "",
+  "openDepartmentId": "", // 开课部门ID
   "courseTypeId": "", // 课程类型ID
   "coursePropertyId": "", // 课程属性ID
   "canSelect": 1, // 是否可选 （1/0）
