--- a/docs/选课.md
+++ b/docs/选课.md
@@ -55,8 +55,8 @@
         "nameZh": "普陀校区",
         "nameEn": null
     }, // 校区信息
-    "limitCount": 71,
-    "acrossMajorLimitCount": 5,
+    "limitCount": 71, // 人数上限
+    "acrossMajorLimitCount": 5, // 跨专业人数上限
     "acrossMajorEnable": true, // 选课限制
     "dateTimePlace": {
         "textZh": "4~9周 星期五 6~8节 普陀校区 文史楼107",
@@ -519,7 +519,15 @@
 }
 ```
 ### 课程名额查询（批量）
-- GET https://byyt.ecnu.edu.cn/course-selection-api/api/v1/student/course-select/std-count?lessonIds={课程ID1},{课程ID2}
+- POST https://byyt.ecnu.edu.cn/course-selection-api/api/v1/student/course-select/std-count
+- Body
+```json
+{
+  "lessonIds": [
+    735875 // 课程ID列表
+  ]
+}
+```
 - Response
 ```json
 {
